# Chtholly-LLVM

./: .gitignore  CMakeLists.txt  Chtholly.md  README.md  RoadMap.md  agents.md  build.py  test.cns
examples/: hello_world.cns
src/: AST.cpp  AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Chtholly.cpp  Chtholly.hpp  Compiler.cpp  Compiler.hpp  Expr.h  Lexer.cpp  Lexer.h  Lexer.hpp  Parser.cpp  Parser.h  Parser.hpp  Stdlib.cpp  Stdlib.hpp  Stmt.h  Token.h  Token.hpp  Transpiler.cpp  Transpiler.hpp  Type.hpp  lib.cpp  main.cpp
src/ast/: AST.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
src/stdlib/: console.cpp  console.hpp  iostream.cpp  iostream.hpp  math.cpp  math.hpp  string.cpp  string.hpp
tests/: CMakeLists.txt  ClassTests.cpp  FunctionTests.cpp  LexerTest.cpp  LexerTests.cpp  ParserTest.cpp  ParserTests.cpp  TranspilerTests.cpp  class_members.cns  invalid_access.cns  test_arrays.cpp  test_class.cpp  test_class_members.cpp  test_console.cpp  test_control_flow.cpp  test_errors.cpp  test_functions.cpp  test_generics.cpp  test_helper.hpp  test_lexer.cpp  test_main.cpp  test_main_args.cpp  test_math.cpp  test_module.cpp  test_object_management.cpp  test_operators.cpp  test_parser.cpp  test_stdlib.cpp  test_string.cpp  test_struct.cpp  test_switch.cpp  test_transpiler.cpp  test_type_system.cpp  test_variables.cpp
